[package]
name = "spy-pet-checker"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1
strip = true

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
color-eyre = "0.6.3"
reqwest = "0.12.4"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
